--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "@angular/router": "^15.0.0",
     "@ng-bootstrap/ng-bootstrap": "^13.1.1",
     "@popperjs/core": "^2.11.6",
+    "angular2-logger": "^0.7.0",
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.2",
+    "jquery": "^3.6.1",
+    "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
@@ -30,7 +34,9 @@
     "@angular/cli": "~15.0.0",
     "@angular/compiler-cli": "^15.0.0",
     "@angular/localize": "^15.0.2",
+    "@types/core-js": "^2.5.5",
     "@types/jasmine": "~4.3.0",
+    "@types/jquery": "^3.5.14",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
