--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@angular/localize": "^15.0.2",
     "@types/core-js": "^2.5.5",
     "@types/jasmine": "~4.3.0",
+    "cypress": "^12.1.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
