--- a/angular.json
+++ b/angular.json
@@ -82,7 +82,7 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "karmaConfig": "karma.conf.js",
+            "karmaConfig": "src/karma.conf.js",
             "polyfills": [
               "zone.js",
               "zone.js/testing"
