unfinished: pdf maker

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "angular2-logger": "^0.7.0",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.2",
+    "jspdf": "^2.5.1",
     "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
